(update) boj_basic1/day2 - complete

--- a/boj_basic1/day2(자구1_연습-참조).ipynb
+++ b/boj_basic1/day2(자구1_연습-참조).ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71ccef24",
    "metadata": {},
    "source": [
     "# 백준 기초 -1 (자료구조)\n",
     "### 미해결 문제\n",
-    "- 없음"
+    "- 쇠막대기 : 시간초과\n",
+    "- 오큰수 : 시간초과\n",
+    "- 오등큰수 : 시간초과\n",
+    "- 후위표기식 : 미해결"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b9653bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e547114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb7568a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8c4d33e2",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8005608a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +178,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6cebfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3585f49e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +237,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cc35aaf8",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +271,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce57ee96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +306,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5ff7952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,77 +340,147 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54b8845c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 알파벳 개수"
+    "# 알파벳 개수\n",
+    "import sys\n",
+    "\n",
+    "s = sys.stdin.readline().strip()\n",
+    "alpha = [0 for i in range(26)]\n",
+    "\n",
+    "for c in s:\n",
+    "    alpha[ord(c)-97] += 1\n",
+    "\n",
+    "print(*alpha)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f517add",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 알파벳 찾기"
+    "# 알파벳 찾기\n",
+    "import sys\n",
+    "\n",
+    "s = sys.stdin.readline().strip()\n",
+    "alpha = [-1 for i in range(26)]\n",
+    "\n",
+    "count = 0\n",
+    "for c in s:\n",
+    "    if alpha[ord(c)-97] == -1:\n",
+    "        alpha[ord(c)-97] = count\n",
+    "    count += 1\n",
+    "    \n",
+    "print(*alpha)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7606295",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 문자열 분석"
+    "# 문자열 분석\n",
+    "import sys\n",
+    "\n",
+    "for i in range(100):\n",
+    "    s = sys.stdin.readline()\n",
+    "    if not s:\n",
+    "        break\n",
+    "    result = [0 for i in range(4)]\n",
+    "\n",
+    "    for c in s:\n",
+    "        if ord(c) >= ord('a') and ord(c) <= ord('z'):\n",
+    "            result[0] += 1\n",
+    "        elif ord(c) >= ord('A') and ord(c) <= ord('Z'):\n",
+    "            result[1] += 1\n",
+    "        elif ord(c) >= ord('0') and ord(c) <= ord('9'):\n",
+    "            result[2] += 1            \n",
+    "        elif c == ' ':\n",
+    "            result[3] += 1\n",
+    "\n",
+    "    print(*result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a0fe86f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 단어 길이 재기"
+    "# 단어 길이 재기\n",
+    "import sys\n",
+    "\n",
+    "s = sys.stdin.readline().strip()\n",
+    "\n",
+    "print(len(s))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3a87872",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ROT13"
+    "# ROT13\n",
+    "import sys\n",
+    "\n",
+    "s = sys.stdin.readline()\n",
+    "result = ''\n",
+    "for c in s:\n",
+    "    if ord(c) >= ord('a') and ord(c) <= ord('z'):\n",
+    "        result += chr((ord(c) - ord('a')+13)%26 + ord('a'))\n",
+    "    elif ord(c) >= ord('A') and ord(c) <= ord('Z'):\n",
+    "        result += chr((ord(c) - ord('A')+13)%26 + ord('A'))\n",
+    "    else:\n",
+    "        result += c\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b2105b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 네 수"
+    "# 네 수\n",
+    "import sys\n",
+    "\n",
+    "s = sys.stdin.readline().strip().split()\n",
+    "\n",
+    "ab = int(''.join(s[0:2]))\n",
+    "cd = int(''.join(s[2:4]))\n",
+    "\n",
+    "print(ab + cd)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61896883",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 접미사 배열"
+    "# 접미사 배열\n",
+    "import sys\n",
+    "\n",
+    "s = sys.stdin.readline().strip()\n",
+    "result = []\n",
+    "\n",
+    "for i in range(len(s)):\n",
+    "    result.append(s[i:])\n",
+    "\n",
+    "result.sort()\n",
+    "for i in result:\n",
+    "    print(i)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
