--- a/boj_basic1/day3(수학1).ipynb
+++ b/boj_basic1/day3(수학1).ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# 백준 기초 -1 (자료구조)\n",
     "### 미해결 문제\n",
-    "- 없음"
+    "- 골드바흐의 추측 : 시간초과\n",
+    "- 조합0의 개수 : 시간초과"
    ]
   },
   {
@@ -225,7 +226,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 골드바흐의 추측"
+    "# 골드바흐의 추측\n",
+    "# sol1 - 시간초과\n",
+    "import sys\n",
+    "\n",
+    "n = -1\n",
+    "l = []\n",
+    "primes = []\n",
+    "while 1:\n",
+    "    n  = int(sys.stdin.readline().strip())\n",
+    "    if n == 0:\n",
+    "        break\n",
+    "    l.append(n)\n",
+    "\n",
+    "m = [1 for i in range(max(l))]\n",
+    "for i in range(2,max(l)):\n",
+    "    if not m[i-1]:\n",
+    "        continue\n",
+    "    else:\n",
+    "        for j in range (i+i,max(l)+1,i):\n",
+    "            m[j-1] = 0\n",
+    "        primes.append(i)\n",
+    "m[0] = 0\n",
+    "m[1] = 0\n",
+    "    \n",
+    "found = 0\n",
+    "for n in l:\n",
+    "    for i in primes:\n",
+    "        if (i+i) <= n:\n",
+    "            for j in primes[primes.index(i):]:\n",
+    "                if n == i + j:\n",
+    "                    found = 1\n",
+    "                    break\n",
+    "                else:\n",
+    "                    continue\n",
+    "        else:\n",
+    "            continue\n",
+    "        \n",
+    "        if found:\n",
+    "            print(n,'=',i,'+',j)\n",
+    "            found = 0\n",
+    "            break\n",
+    "        elif i+i > n: \n",
+    "            print(\"Goldbach's conjecture is wrong.\")\n",
+    "            break\n",
+    "        else:\n",
+    "            continue"
    ]
   },
   {
@@ -234,7 +280,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 팩토리얼"
+    "# sol2 - 다른사람 코드 참고 - 시간초과(sol1보다 빠르긴 함)\n",
+    "import sys\n",
+    "#에라토스테네스의 체를 활용하여 모든 소수를 구한다.\n",
+    "MAX = 1000000\n",
+    "check = [False, False] + [True] * (MAX-1)\n",
+    "primes = []\n",
+    "count = 0\n",
+    "for i in range(2, (MAX+1)//2):\n",
+    "    if check[i]:\n",
+    "        primes.append(i)\n",
+    "        count += 1\n",
+    "        for j in range(i*2, MAX+1, i):\n",
+    "            check[j] = False\n",
+    "# 내가 원하는 소수를 찾는 이 부분이 어려웠다.\n",
+    "while True:\n",
+    "    N = int(input())\n",
+    "#     N = int(sys.stdin.readline())\n",
+    "    if N == 0:\n",
+    "        break\n",
+    "    for i in range(1, count):\n",
+    "        if check[N-primes[i]] == True:\n",
+    "            print(f'{N} = {primes[i]} + {N-primes[i]}')\n",
+    "            break"
    ]
   },
   {
@@ -243,7 +311,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 팩토리얼 0의 개수"
+    "# sol3 - 다른사람 코드 참고\n",
+    "import sys\n",
+    "\n",
+    "def Goldbach():\n",
+    "    check = [False, False] + [True] * 1000000\n",
+    "    \n",
+    "    for i in range(2, 1001):\n",
+    "        if check[i] == True:\n",
+    "            for j in range(i + i, 1000001, i):\n",
+    "                check[j] = False\n",
+    "\n",
+    "    while True:\n",
+    "        n = int(sys.stdin.readline())\n",
+    "\n",
+    "        if n == 0:\n",
+    "            break\n",
+    "\n",
+    "        A = 0\n",
+    "        B = n\n",
+    "        for _ in range(1000000):\n",
+    "            if check[A] and check[B]:\n",
+    "                print(f\"{n} = {A} + {B}\")\n",
+    "                break\n",
+    "            A += 1\n",
+    "            B -= 1\n",
+    "        else:\n",
+    "            print(\"Goldbach's conjecture is wrong.\")\n",
+    "\n",
+    "Goldbach()"
    ]
   },
   {
@@ -252,7 +348,141 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 조합 0의 개수"
+    "# 팩토리얼\n",
+    "import sys\n",
+    "\n",
+    "n = int(sys.stdin.readline().strip())\n",
+    "fac = 1\n",
+    "for i in range(1,n+1):\n",
+    "    fac *= i\n",
+    "print(fac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 팩토리얼 0의 개수\n",
+    "import sys\n",
+    "\n",
+    "n = int(sys.stdin.readline().strip())\n",
+    "fac = 1\n",
+    "for i in range(1,n+1):\n",
+    "    fac *= i\n",
+    "\n",
+    "zero = 0\n",
+    "for i in str(fac)[::-1]:\n",
+    "    if i == '0':\n",
+    "        zero += 1\n",
+    "    else:\n",
+    "        break\n",
+    "print(zero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 조합 0의 개수\n",
+    "# sol1 - 시간초과\n",
+    "import sys\n",
+    "\n",
+    "def factorial(n):\n",
+    "    fac = 1\n",
+    "    for i in range(1,n+1):\n",
+    "        fac *= i\n",
+    "    return fac\n",
+    "\n",
+    "def combination(n,r):\n",
+    "    return int(factorial(n) / (factorial(n-r) * factorial(r)))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    n,m = map(int,sys.stdin.readline().strip().split())\n",
+    "\n",
+    "    zero = 0\n",
+    "    for i in str(combination(n,m))[::-1]:\n",
+    "        if i == '0':\n",
+    "            zero += 1\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    print(zero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sol2 - 시간초과\n",
+    "import sys\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    n,m = map(int,sys.stdin.readline().strip().split())\n",
+    "\n",
+    "    l_n = [0,0]\n",
+    "    l_m = [0,0]\n",
+    "    for i in range(1,m+1):\n",
+    "        if i % 2 == 0:\n",
+    "            a = 1\n",
+    "            while i % (2**a) == 0:\n",
+    "                a += 1\n",
+    "            a -= 1\n",
+    "            l_m[0] += a\n",
+    "        if i % 5 == 0:\n",
+    "            a = 1\n",
+    "            while i % (5**a) == 0:\n",
+    "                a += 1\n",
+    "            a -= 1\n",
+    "            l_m[1] += 1\n",
+    "\n",
+    "    for i in range(n-m+1,n+1):\n",
+    "        if i % 2 == 0:\n",
+    "            a = 1\n",
+    "            while i % (2**a) == 0:\n",
+    "                a += 1\n",
+    "            a -= 1\n",
+    "            l_n[0] += a\n",
+    "        if i % 5 == 0:\n",
+    "            print(i)\n",
+    "            a = 1\n",
+    "            while i % (5**a) == 0:\n",
+    "                a += 1\n",
+    "            a -= 1\n",
+    "            l_n[1] += a\n",
+    "    print(min(l_n) - min(l_m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sol3 - 다른 사람 코드 참고\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "\n",
+    "def two_count(n):\n",
+    "    two = 0\n",
+    "    while n != 0:\n",
+    "        n = n // 2\n",
+    "        two += n\n",
+    "    return two\n",
+    "\n",
+    "def five_count(n):\n",
+    "    five = 0\n",
+    "    while n != 0:\n",
+    "        n = n // 5\n",
+    "        five += n\n",
+    "    return five\n",
+    "\n",
+    "print(min(two_count(n) - two_count(n - m) - two_count(m), five_count(n) - five_count(n - m) - five_count(m)))"
    ]
   }
  ],
